--- a/preferences/_comment_types.toml
+++ b/preferences/_comment_types.toml
@@ -36,22 +36,41 @@
 
 
 [[commentTypes]]
-# override existing
+
 matchString = '🔎 WHAT'
-cssClass = ''
-color = 'rgba(0,0,0,1)'
-backgroundColor = 'rgba(0,255,0,0.5)'
+cssClass = 'explanationCommentHeader'
 help = 'Questions to consider'
 isBookmark = true
 
 [[commentTypes]]
 
+matchString = '🔎'
+cssClass = 'explanationCommentBody'
+help = 'Questions to consider'
+isBookmark = false
+
+[[commentTypes]]
+
 matchString = '🔎 HOW'
 cssClass = ''
-color = 'rgba(255,255,255,1)'
+color = 'rgba(0,0,0,1)'
 backgroundColor = 'rgba(0,255,0,0.5)'
 help = 'Explanation for how this works.'
 isBookmark = true
+
+[[commentTypes]]
+
+matchString = '✏️ CHANGE'
+cssClass = 'changeCommentHeader'
+help = 'Some code that we can change.'
+isBookmark = true
+
+[[commentTypes]]
+
+matchString = '✏️'
+cssClass = 'changeCommentBody'
+help = 'Explanation for how this works.'
+isBookmark = false
 
 [[commentTypes]]
 
